module3-solution/css/styles.css
/********** Base styles **********/
* {
  box-sizing: border-box;
}

body {
  font-family: Helvetica;
}

/** HEADER **/
#header-nav {
  background-color: silver;
  border-radius: 0;
  border: 0;
}

.navbar-brand span {
  color: black;
  font-size: 1.25em;
  font-weight: bold;
}

#nav-list a {
  color:black;
  font-weight: bold;
}

#nav-list li {
  border: 1px solid black
}

#nav-list {
  font-size: 1em;
  margin: 0;
  padding: 0;
  background-color: white;
  border:1px solid black;
}

#collapsable-nav {
	width:100%;
	padding: 0;
	position:absolute;
	z-index: 1; 
}

.grid-with-margin {
	margin-top: 20px;
}

.section {
	background-color: silver;
	padding: 10px;
}

.section-header {
	background-color: silver;
	text-align: center;
	font-weight: bold;
	font-size: 1.5em;
}

